deploy-ajb/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ajb
  name: ajb
  namespace: ajb-app
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app: ajb
  type: LoadBalancer
